﻿WIP 2.3.1
DETAILED CHANGELOG:
 - Added default templates for attached vertex and edge labels
 - Fixed excessive rendering issue when ZoomControl viewfinder is hidden. Should significantly increase performance of the viewfinder in this case.
 
RELEASE 2.3.0

HIGHLIGHTS:
	* Added new layout algorithm GroupingLayoutAlgorithm which allows to layout graph vertices by different groups each using its own sublayout algorithm. You can see it in action using new feature highlight in showcase app.
      Currently there are two modes supported:
		- Layout groups to predefined bounds, when you can specify rectangular bounds in which vertices are layed (Bounds must be supported by algorithm used to layout vertices group)
		- Generate bounds from groups, when each group is layouted using its algorithm and bounds are automatically calculated to fit all vertices in the group and then group bounds overlaps can be removed.
	* Added two new label controls AttachedEdgeLabelControl and AttachedVertexLabelControl which acts like separate entities in GraphArea visual tree and have weak references to graphx controls. Default EdgeLableControl and VertexLabelControl are designed to act as the part of their parent classes and this approach impacts their customization possibilities when these parent classes are limited in size. So with the new labels you can mitigate following restrictions:
		- No more label cuts when vertex is strictly limited in width or height
		- No more jerky edge endpoints when edge label is too large
		- No more labels behind edges or vertices. You can control how to inject them		
	To use new labels you have to add AttachedVertexLabel and/or AttachedEdgeLabel XAML templates and also set GraphArea::VertexLabelFactory / EdgeLabelFactory.

DETAILED CHANGELOG:
	+ Added GroupId property to IGraphXVertex interface